--- a/index.html
+++ b/index.html
@@ -14,17 +14,140 @@
     <title>Frontend Mentor | News homepage</title>
   </head>
   <body>
-    Home New Popular Trending Categories The Bright Future of Web 3.0? We dive
-    into the next evolution of the web that claims to put the power of the
-    platforms back into the hands of the people. But is it really fulfilling its
-    promise? Read more New Hydrogen VS Electric Cars Will hydrogen-fueled cars
-    ever catch up to EVs? The Downsides of AI Artistry What are the possible
-    adverse effects of on-demand AI image generation? Is VC Funding Drying Up?
-    Private funding by VC firms is down 50% YOY. We take a look at what that
-    means. 01 Reviving Retro PCs What happens when old PCs are given modern
-    upgrades? 02 Top 10 Laptops of 2022 Our best picks for various needs and
-    budgets. 03 The Growth of Gaming How the pandemic has sparked fresh
-    opportunities.
+    <!-- navbr -->
+    <nav class="nav">
+      <!-- mav-logo -->
+      <img class="nav-logo" src="./assets/images/logo.svg" alt="" />
+      <!-- nav links container -->
+      <div class="nav-links-container">
+        <!-- nav links -->
+        <ul class="nav-links">
+          <!-- link 1 -->
+          <li><a href="#">Home</a></li>
+          <!-- end of link 1 -->
+          <!-- link 2 -->
+          <li><a href="#">New</a></li>
+          <!-- end of link 2 -->
+          <!-- link 3 -->
+          <li><a href="#">Popular</a></li>
+          <!-- end of link 3 -->
+          <!-- link 4 -->
+          <li><a href="#">Trending</a></li>
+          <!-- end of link 4 -->
+          <!-- link 5 -->
+          <li><a href="#">Categories</a></li>
+          <!-- end of link 5 -->
+        </ul>
+      </div>
+      <!-- nav menu button -->
+      <img class="nav-closebtn" src="./assets/images/icon-menu.svg" alt="" />
+    </nav>
+    <!-- sidebar -->
+    <aside class="sidebar">
+      <!-- sidebar container -->
+      <div class="sidebar-container">
+        <!-- sidebar close btn -->
+        <img
+          class="sidebar-container-closebtn"
+          src="./assets/images/icon-menu-close.svg"
+          alt=""
+        />
+        <!-- sidebar links -->
+        <ul class="sidebar-container-links">
+          <!-- link 1 -->
+          <li><a href="#">Home</a></li>
+          <!-- end of link 1 -->
+          <!-- link 2 -->
+          <li><a href="#">New</a></li>
+          <!-- end of link 2 -->
+          <!-- link 3 -->
+          <li><a href="#">Popular</a></li>
+          <!-- end of link 3 -->
+          <!-- link 4 -->
+          <li><a href="#">Trending</a></li>
+          <!-- end of link 4 -->
+          <!-- link 5 -->
+          <li><a href="#">Categories</a></li>
+          <!-- end of link 5 -->
+        </ul>
+      </div>
+    </aside>
+    <!-- header -->
+    <header>
+      <div class="section header">
+        <!-- header left section -->
+        <div class="header-left">
+          <img
+            class="header-left-header"
+            src="./assets/images/image-web-3-mobile.jpg"
+            alt=""
+          />
+          <div class="header-left-content">
+            <h1 class="header-left-content-header">
+              The Bright Future of Web 3.0?
+            </h1>
+            <div class="header-left-content-desc">
+              <p class="header-left-content-desc-text">
+                We dive into the next evolution of the web that claims to put
+                the power of the platforms back into the hands of the people.
+                But is it really fulfilling its promise?
+              </p>
+              <a class="header-left-content-desc-btn" href="#"> Read more</a>
+            </div>
+          </div>
+        </div>
+        <!-- header right section -->
+        <div>
+          <h1>New</h1>
+          <div>
+            <h2>Hydrogen VS Electric Cars</h2>
+            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </div>
+          <div>
+            <h2>The Downsides of AI Artistry</h2>
+            <p>
+              What are the possible adverse effects of on-demand AI image
+              generation?
+            </p>
+          </div>
+          <div>
+            <h2>Is VC Funding Drying Up?</h2>
+            <p>
+              Private funding by VC firms is down 50% YOY. We take a look at
+              what that means.
+            </p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section>
+      <div>
+        <div>
+          <img src="./assets/images/image-retro-pcs.jpg" alt="" />
+          <div>
+            <h1>01</h1>
+            <h2>Reviving Retro PCs</h2>
+            <p>What happens when old PCs are given modern upgrades?</p>
+          </div>
+        </div>
+        <div>
+          <img src="./assets/images/image-top-laptops.jpg" alt="" />
+          <div>
+            <h1>02</h1>
+            <h2>Top 10 Laptops of 2022</h2>
+            <p>Our best picks for various needs and budgets.</p>
+          </div>
+        </div>
+        <div>
+          <img src="./assets/images/image-gaming-growth.jpg" alt="" />
+          <div>
+            <h1>03</h1>
+            <h2>The Growth of Gaming</h2>
+            <p>How the pandemic has sparked fresh opportunities.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- footer -->
     <footer class="attribution">
