--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- navbr -->
-    <nav class="nav">
+    <nav class="nav section">
       <!-- mav-logo -->
       <img class="nav-logo" src="./assets/images/logo.svg" alt="" />
       <!-- nav links container -->
@@ -97,7 +97,7 @@
           </div>
         </div>
         <!-- header right section -->
-        <div>
+        <div class="header-news">
           <h1>New</h1>
           <div>
             <h2>Hydrogen VS Electric Cars</h2>
@@ -110,7 +110,7 @@
               generation?
             </p>
           </div>
-          <div>
+          <div class="new-3">
             <h2>Is VC Funding Drying Up?</h2>
             <p>
               Private funding by VC firms is down 50% YOY. We take a look at
@@ -121,31 +121,31 @@
       </div>
     </header>
     <section>
-      <div>
-        <div>
+      <div class="section articles">
+        <article>
           <img src="./assets/images/image-retro-pcs.jpg" alt="" />
           <div>
             <h1>01</h1>
             <h2>Reviving Retro PCs</h2>
             <p>What happens when old PCs are given modern upgrades?</p>
           </div>
-        </div>
-        <div>
+        </article>
+        <article>
           <img src="./assets/images/image-top-laptops.jpg" alt="" />
           <div>
             <h1>02</h1>
             <h2>Top 10 Laptops of 2022</h2>
             <p>Our best picks for various needs and budgets.</p>
           </div>
-        </div>
-        <div>
+        </article>
+        <article>
           <img src="./assets/images/image-gaming-growth.jpg" alt="" />
           <div>
             <h1>03</h1>
             <h2>The Growth of Gaming</h2>
             <p>How the pandemic has sparked fresh opportunities.</p>
           </div>
-        </div>
+        </article>
       </div>
     </section>
 
