--- a/index.html
+++ b/index.html
@@ -43,63 +43,38 @@
       <img class="nav-closebtn" src="./assets/images/icon-menu.svg" alt="" />
     </nav>
     <!-- sidebar -->
-    <aside class="sidebar">
-      <!-- sidebar container -->
-      <div class="sidebar-container">
-        <!-- sidebar close btn -->
-        <img
-          class="sidebar-container-closebtn"
-          src="./assets/images/icon-menu-close.svg"
-          alt=""
-        />
-        <!-- sidebar links -->
-        <ul class="sidebar-container-links">
-          <!-- link 1 -->
-          <li><a href="#">Home</a></li>
-          <!-- end of link 1 -->
-          <!-- link 2 -->
-          <li><a href="#">New</a></li>
-          <!-- end of link 2 -->
-          <!-- link 3 -->
-          <li><a href="#">Popular</a></li>
-          <!-- end of link 3 -->
-          <!-- link 4 -->
-          <li><a href="#">Trending</a></li>
-          <!-- end of link 4 -->
-          <!-- link 5 -->
-          <li><a href="#">Categories</a></li>
-          <!-- end of link 5 -->
-        </ul>
-      </div>
-    </aside>
+
     <!-- header -->
     <header>
       <div class="section header">
         <!-- header left section -->
-        <div class="header-left">
+        <div class="header-header">
           <img
-            class="header-left-header"
+            class="header-header-mobile"
             src="./assets/images/image-web-3-mobile.jpg"
             alt=""
           />
-          <div class="header-left-content">
-            <h1 class="header-left-content-header">
-              The Bright Future of Web 3.0?
-            </h1>
-            <div class="header-left-content-desc">
-              <p class="header-left-content-desc-text">
+          <img
+            class="header-header-desktop"
+            src="./assets/images/image-web-3-desktop.jpg"
+            alt=""
+          />
+          <div class="header-content">
+            <h1 class="header-content-header">The Bright Future of Web 3.0?</h1>
+            <div class="header-content-desc">
+              <p class="header-content-desc-text">
                 We dive into the next evolution of the web that claims to put
                 the power of the platforms back into the hands of the people.
                 But is it really fulfilling its promise?
               </p>
-              <a class="header-left-content-desc-btn" href="#"> Read more</a>
+              <a class="header-content-desc-btn" href="#"> Read more</a>
             </div>
           </div>
         </div>
         <!-- header right section -->
         <div class="header-news">
           <h1>New</h1>
-          <div>
+          <div class="new-1">
             <h2>Hydrogen VS Electric Cars</h2>
             <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
           </div>
@@ -121,7 +96,7 @@
       </div>
     </header>
     <section>
-      <div class="section articles">
+      <div class="articles section">
         <article>
           <img src="./assets/images/image-retro-pcs.jpg" alt="" />
           <div>
