--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <!-- nav links -->
         <ul class="nav-links">
           <!-- link 1 -->
-          <li><a href="#">Home</a></li>
+          <li>
+            <a href="#">Home </a>
+          </li>
           <!-- end of link 1 -->
           <!-- link 2 -->
           <li><a href="#">New</a></li>
@@ -43,19 +45,47 @@
       <img class="nav-closebtn" src="./assets/images/icon-menu.svg" alt="" />
     </nav>
     <!-- sidebar -->
-
+    <aside class="sidebar">
+      <!-- sidebar container -->
+      <div class="sidebar-container">
+        <!-- sidebar close btn -->
+        <img
+          class="sidebar-container-closebtn"
+          src="./assets/images/icon-menu-close.svg"
+          alt=""
+        />
+        <!-- sidebar links -->
+        <ul class="sidebar-container-links">
+          <!-- link 1 -->
+          <li><a href="#">Home</a></li>
+          <!-- end of link 1 -->
+          <!-- link 2 -->
+          <li><a href="#">New</a></li>
+          <!-- end of link 2 -->
+          <!-- link 3 -->
+          <li><a href="#">Popular</a></li>
+          <!-- end of link 3 -->
+          <!-- link 4 -->
+          <li><a href="#">Trending</a></li>
+          <!-- end of link 4 -->
+          <!-- link 5 -->
+          <li><a href="#">Categories</a></li>
+          <!-- end of link 5 -->
+        </ul>
+      </div>
+    </aside>
     <!-- header -->
     <header>
       <div class="section header">
-        <!-- header left section -->
-        <div class="header-header">
+        <!-- header content -->
+        <div>
           <img
-            class="header-header-mobile"
+            class="header-mobile"
             src="./assets/images/image-web-3-mobile.jpg"
             alt=""
           />
           <img
-            class="header-header-desktop"
+            class="header-desktop"
             src="./assets/images/image-web-3-desktop.jpg"
             alt=""
           />
@@ -71,19 +101,24 @@
             </div>
           </div>
         </div>
-        <!-- header right section -->
+        <!-- header news -->
         <div class="header-news">
           <h1>New</h1>
+          <!-- news 1  -->
           <div class="new-1">
             <h2>Hydrogen VS Electric Cars</h2>
             <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
           </div>
-          <div>
+          <!-- end of news 1  -->
+          <!-- news 2  -->
+          <div class="new-2">
             <h2>The Downsides of AI Artistry</h2>
             <p>
               What are the possible adverse effects of on-demand AI image
               generation?
             </p>
+            <!-- end of news 2  -->
+            <!-- news 3  -->
           </div>
           <div class="new-3">
             <h2>Is VC Funding Drying Up?</h2>
@@ -91,39 +126,38 @@
               Private funding by VC firms is down 50% YOY. We take a look at
               what that means.
             </p>
+            <!-- end of news 3  -->
           </div>
         </div>
       </div>
     </header>
-    <section>
-      <div class="articles section">
-        <article>
-          <img src="./assets/images/image-retro-pcs.jpg" alt="" />
-          <div>
-            <h1>01</h1>
-            <h2>Reviving Retro PCs</h2>
-            <p>What happens when old PCs are given modern upgrades?</p>
-          </div>
-        </article>
-        <article>
-          <img src="./assets/images/image-top-laptops.jpg" alt="" />
-          <div>
-            <h1>02</h1>
-            <h2>Top 10 Laptops of 2022</h2>
-            <p>Our best picks for various needs and budgets.</p>
-          </div>
-        </article>
-        <article>
-          <img src="./assets/images/image-gaming-growth.jpg" alt="" />
-          <div>
-            <h1>03</h1>
-            <h2>The Growth of Gaming</h2>
-            <p>How the pandemic has sparked fresh opportunities.</p>
-          </div>
-        </article>
-      </div>
+    <!-- articles -->
+    <section class="articles section">
+      <article>
+        <img src="./assets/images/image-retro-pcs.jpg" alt="" />
+        <div>
+          <h1>01</h1>
+          <h2>Reviving Retro PCs</h2>
+          <p>What happens when old PCs are given modern upgrades?</p>
+        </div>
+      </article>
+      <article>
+        <img src="./assets/images/image-top-laptops.jpg" alt="" />
+        <div>
+          <h1>02</h1>
+          <h2>Top 10 Laptops of 2022</h2>
+          <p>Our best picks for various needs and budgets.</p>
+        </div>
+      </article>
+      <article>
+        <img src="./assets/images/image-gaming-growth.jpg" alt="" />
+        <div>
+          <h1>03</h1>
+          <h2>The Growth of Gaming</h2>
+          <p>How the pandemic has sparked fresh opportunities.</p>
+        </div>
+      </article>
     </section>
-
     <!-- footer -->
     <footer class="attribution">
       Challenge by
