--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </ul>
       </div>
       <!-- nav menu button -->
-      <img class="nav-closebtn" src="./assets/images/icon-menu.svg" alt="" />
+      <img class="nav-menubtn" src="./assets/images/icon-menu.svg" alt="" />
     </nav>
     <!-- sidebar -->
     <aside class="sidebar">
@@ -165,5 +165,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/amirhazizi">Amir Hossein Azizi</a>
     </footer>
+    <script src="./js/app.js"></script>
   </body>
 </html>
